2004-12-20  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR middle-end/18776
	* expr.c (write_complex_part): Use a subreg if the original object
	is a hard reg that spans an even number of regs or a MEM.
	(read_complex_part): Likewise.

2004-12-20  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.in (install-common): Do not install the specs file
	unless SPECS is defined.

2004-12-20  Zdenek Dvorak  <dvorakz@suse.cz>

	PR rtl-optimization/18942
	* simplify-rtx.c (simplify_relational_operation_1): Simplify
	x + cst1 == cst2 to x == cst2 - cst1.  Made static.

2004-12-20  Matt Austern  <austern@apple.com>

	PR c++/19044
	* c-common.c (set_builtin_user_assembler_name): New.
	* c-common.h (set_builtin_user_assembler_name): Declare.
	* c-decl.c (finish_decl): Use set_builtin_user_assembler_name
	
2004-12-20  Diego Novillo  <dnovillo@redhat.com>

	PR tree-optimization/19080

	Merge from tree-cleanup-branch

	* tree-flow-inline.h (clear_call_clobbered): New function.
	* tree-ssa-alias.c (init_alias_info): Call it.

2004-12-20  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.md (sse2_movsd): Remove ix86_binary_operator_ok
	check.

2004-12-20  Steven Bosscher  <stevenb@suse.de>
	    Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/18191
	PR middle-end/18965
	PR middle-end/18999
	* expr.c (categorize_ctor_elements_1): Count the total number
	of elements in the constructor.
	(categorize_ctor_elements): Return it in a new argument.
	* tree.h (categorize_ctor_elements): Adjust prototype.
	* gimplify.c (gimplify_init_ctor_eval_range): New.
	(gimplify_init_ctor_eval): Gimplify RANGE_EXPR.
	(gimplify_init_constructor): Block clear the object if the
	constructor has fewer elements than the object type.  Only try
	to add assignments to individual elements when we have to.

2004-12-20  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_init_mmx_sse_builtins): Use 
	long_long_integer_type_node in building V2DI_type_node.
